--- a/angular-signal/index.html
+++ b/angular-signal/index.html
@@ -64,7 +64,7 @@
     </ul>
 
   </p-note>
-  <img alt="qr" src="img/export_1.png" style="padding-top: 5vh" />
+  <img alt="qr" src="img/export_1.png" />
 </p-slide>
 <p-slide class="two-columns-flex-start">
   <p-note class="my-presentation my-list">
@@ -85,7 +85,7 @@
       <li>📌 I consumer sono memoized by default.</li>
     </ul>
   </p-note>
-  <img alt="qr" src="img/export_1.png" style="padding-top: 5vh" />
+  <img alt="qr" src="img/export_1.png" />
 </p-slide>
 <p-slide class="two-columns-flex-start" style="flex-direction: row;flex-wrap: nowrap;">
   <p-note class="my-presentation my-list">
@@ -172,11 +172,10 @@
 </p-slide>
 <p-slide>
   <div class="two-columns" style="align-items: center;">
-    <div><img alt="code_05" src="img/export_5.png" style="height: 100vh; transform: scale(0.8)" /></div>
-    <div class="two-columns" style="flex-direction: column">
-      <img alt="code_06" src="img/export_6.png"
-           style="width: fit-content;height: 50vh;max-width: -webkit-fill-available;" />
-      <p-note class="long-list" style="width: fit-content;height: 10vh; margin-top: 1em; text-align: center">
+    <img alt="code_05" src="img/export_5.png" />
+    <div class="two-columns" style="align-items: center;flex-direction: column">
+      <img alt="code_06" src="img/export_6.png" style="width: 10em;" />
+      <p-note class="long-list" style="margin-top: 1em;width: 21em;">
         Essendo l’emissione di signal sincrona, la nostra lista è istantaneamente aggiornata ad ogni aggiunta di un task
         tramite il bottone dedicato, evitandoci così di usare la pipe async o altri metodi di sottoscrizione
       </p-note>
@@ -187,8 +186,8 @@
   <h1>In sinergia con gli Observable</h1>
 </p-slide>
 <p-slide>
-  <p-note class="two-columns" style="align-items: center;">
-    <div><img alt="code_07" src="img/export_7.png" style="height: 100vh; transform: scale(0.8)" /></div>
+  <div class="two-columns" style="align-items: center;">
+    <img alt="code_07" src="img/export_7.png" />
     <div class="two-columns" style="flex-direction: column">
       <p-note class="long-list center" style="width: fit-content;padding-top: 3em;padding-bottom: 1em">
         In questo esempio vediamo come usare in perfetta sinergia observable e signal insieme.
@@ -196,16 +195,13 @@
         esempio, un perfetto sostituto dei behaviour subject per condividere lo stato dell’applicazione tramite service
         (e non solo).
       </p-note>
-      <p-fragment style="text-align: center;width: auto;">
-        <img alt="know_observable" src="img/know_observable.png" />
-      </p-fragment>
 
       <p-fragment class="long-list infoComputed" style="position: absolute">
         La scelta di utilizzare computed è per evitare che venga modificato il valore dall’esterno del service
       </p-fragment>
-      <p-fragment style="position: absolute;top: 7.4em;right: 4em;">↩</p-fragment>
+      <p-fragment style="position: absolute;top: 7.7em;right: 4.5em;">↩</p-fragment>
     </div>
-  </p-note>
+  </div>
 </p-slide>
 
 
@@ -215,8 +211,8 @@
     border: 2px solid;
     text-align: center;
     font-style: italic;
-    top: 18em;
-    right: 6em;
+    top: 15em;
+    right: 7.3em;
     background: #FFF;
   }
 </style><!--/slide:part-two-->
@@ -235,7 +231,7 @@
     </ul>
 
   </p-note>
-  <p-note style="font-size: 4vh;">
+  <p-note style="font-size: 0.5em;">
     <pre class="self-center language-javascript" style="border: 1px solid #101099"> <code> export class InputComponent {
       firstName = input&lt;string>();
       // required inputs
@@ -254,7 +250,7 @@
     </ul>
 
   </p-note>
-  <p-note style="font-size: 4vh;">
+  <p-note style="font-size: 0.5em;">
     <pre class="self-center language-javascript" style="border: 1px solid #101099"><code>export class InputComponent {
   firstName = input&lt;number, string>(0, {
   </code> <p-fragment><code>alias: 'first',
@@ -280,7 +276,7 @@
     </ul>
 
   </p-note>
-  <p-note style="font-size: 4vh;">
+  <p-note style="font-size: 0.5em;">
     <pre class="self-center language-javascript" style="border: 1px solid #101099">
       <code>
   @Component({
