style(main): :lipstick: adding new class

--- a/src/slides/cover.html
+++ b/src/slides/cover.html
@@ -3,6 +3,11 @@
    <p-note class="center">
      <h6>Un approccio pratico</h6>
   </p-note>
+  <p-note class="center bottom-fist-page text-sub-section">
+    <span>Marco Pollacci</span>
+    <span>27/02/2024 - Phygital Hub</span>
+
+  </p-note>
 </p-slide>
 <p-slide class="two-columns">
   <p-note class="my-data my-presentation">
