fix: :ambulance: fix some style bug

--- a/src/slides/part-one.html
+++ b/src/slides/part-one.html
@@ -82,7 +82,7 @@
 </p-slide>
 <p-slide>
   <h5 class="text-cover center">Observable vs Signal</h5>
-  <div class="two-columns">
+  <div style="display: flex; align-items: center;" class="two-columns">
     <p-note>
       <ul class="long-list">
         <li>☝️Gli observable possono non emettere alcun valore</li>
@@ -104,7 +104,7 @@
 </p-slide>
 <p-slide>
   <h5 class="text-cover center">Observable vs Signal</h5>
-  <div class="two-columns" style="align-items: center;">
+  <div style="display: flex; align-items: center;" class="two-columns" style="align-items: center;">
     <img alt="code_03" src="img/export_3.png" />
     <ul class="long-list">
       <p-fragment>
@@ -120,7 +120,7 @@
 </p-slide>
 <p-slide>
   <h5 class="text-cover center">Observable vs Signal</h5>
-  <div class="two-columns" style="align-items: center;">
+  <div style="display: flex; align-items: center;" class="two-columns" style="align-items: center;">
     <img alt="code_04" src="img/export_4.png" />
     <ul class="long-list">
       <p-fragment>
