--- a/src/slides/part-three.html
+++ b/src/slides/part-three.html
@@ -1,7 +1,7 @@
 <p-slide class="cover-subSection">
   <h1>Ultime novità</h1>
 </p-slide>
-<p-slide class="two-columns-flex-start" style="flex-direction: row;align-items: center;">
+<p-slide class="two-columns-flex-start" style="flex-direction: row; align-items: center">
   <p-note class="my-presentation my-list">
     <h5 class="text-cover">Signal Inputs</h5>
     <ul class="long-list">
@@ -11,9 +11,8 @@
       <li>📌 Nessuna breaking change per i componenti padre (allo stato attuale della preview)</li>
       <li>📌 E’ possibile definire un nome alternativo attraverso la proprietà alias di input</li>
     </ul>
-
   </p-note>
-  <p-note style="font-size: 0.5em;">
+  <p-note style="font-size: 0.5em">
     <pre class="self-center language-javascript" style="border: 1px solid #101099"> <code> export class InputComponent {
       firstName = input&lt;string>();
       // required inputs
@@ -23,16 +22,16 @@
   &lt;app-input lastName="Doe">&lt;/app-input> </code> </p-fragment> </pre>
   </p-note>
 </p-slide>
-<p-slide class="two-columns-flex-start" style="flex-direction: row;align-items: center;">
+<p-slide class="two-columns-flex-start" style="flex-direction: row; align-items: center">
   <p-note class="my-presentation my-list">
     <ul class="long-list">
-      <li>E’ inoltre possibile effettuare operazioni di trasformazione alla ricezione dell’input tramite la proprietà
-        transform, sia mantenendo il tipo di output che cambiandolo completamente
+      <li>
+        E’ inoltre possibile effettuare operazioni di trasformazione alla ricezione dell’input tramite la proprietà transform, sia mantenendo il tipo di output che cambiandolo
+        completamente
       </li>
     </ul>
-
   </p-note>
-  <p-note style="font-size: 0.5em;">
+  <p-note style="font-size: 0.5em">
     <pre class="self-center language-javascript" style="border: 1px solid #101099"><code>export class InputComponent {
   firstName = input&lt;number, string>(0, {
   </code> <p-fragment><code>alias: 'first',
@@ -47,8 +46,8 @@
 </code> </p-fragment> </pre>
   </p-note>
 </p-slide>
-<p-slide class="two-columns-flex-start" style="flex-direction: row;align-items: center;">
-  <p-note class="my-presentation my-list" style="align-items: flex-start;">
+<p-slide class="two-columns-flex-start" style="flex-direction: row; align-items: center">
+  <p-note class="my-presentation my-list" style="align-items: flex-start">
     <h6 class="text-cover">viewChild / viewChildren</h6>
     <h6 class="text-cover">contentChild / contentChildren</h6>
     <ul class="long-list" style="margin-top: 1em">
@@ -56,9 +55,8 @@
       <li>📌 Utilizzo di effect al posto dell’afterviewinit lifecycle</li>
       <li>📌 contentChild / contentChildren possono essere usati con lo stesso approccio</li>
     </ul>
-
   </p-note>
-  <p-note style="font-size: 0.5em;">
+  <p-note style="font-size: 0.5em">
     <pre class="self-center language-javascript" style="border: 1px solid #101099">
       <code>
   @Component({
