--- a/src/slides/thanks.html
+++ b/src/slides/thanks.html
@@ -1,5 +1,5 @@
 <p-slide>
-  <img alt="thatsall" src="img/thatsall.gif" style="height: 60vh;" />
+  <img alt="thatsall" src="img/thatsall.gif" style="height: 60vh" />
 </p-slide>
 <p-slide class="two-columns">
   <p-note class="my-data my-presentation">
