--- a/angular-signal/index.html
+++ b/angular-signal/index.html
@@ -1,29 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>Angular Signal</title>
-  <base href=".." />
-  <link href="favicon.ico" rel="shortcut icon" type="image/svg+xml" />
-  <link href="css/prism-one-light.css" rel="stylesheet" />
-  <link href="css/main.css" rel="stylesheet" />
-  <link href="css/print.css" media="print" rel="stylesheet" />
-  <link href="css/presentation.css" rel="stylesheet" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>Angular Signal</title>
+    <base href=".." />
+    <link href="favicon.ico" rel="shortcut icon" type="image/svg+xml" />
+    <link href="css/prism-one-light.css" rel="stylesheet" />
+    <link href="css/main.css" rel="stylesheet" />
+    <link href="css/print.css" media="print" rel="stylesheet" />
+    <link href="css/presentation.css" rel="stylesheet" />
+  </head>
 
-<body>
-<img alt="gdglogo" class="gdgLogo" src="img/logo_dark_QmPdj9K.svg" />
-<p-deck>
-  <!--slide:cover--><p-slide class="cover">
+  <body>
+    <img alt="gdglogo" class="gdgLogo" src="img/logo_dark_QmPdj9K.svg" />
+    <p-deck> <!--slide:cover--><p-slide class="cover">
   <h1>Guida Essenziale all'Integrazione di Angular e Signal</h1>
-   <p-note class="center">
-     <h6>Un approccio pratico</h6>
+  <p-note class="center">
+    <h6>Un approccio pratico</h6>
   </p-note>
   <p-note class="center bottom-fist-page text-sub-section">
     <span>Marco Pollacci</span>
     <span>27/02/2024 - Phygital Hub</span>
-
   </p-note>
 </p-slide>
 <p-slide class="two-columns">
@@ -33,29 +31,21 @@
     <span>Marco Pollacci</span>
     <span class="text-cover">Senior Software Developer @GELLIFY</span>
   </p-note>
-    <img src="img/qr_link.png" alt="qr" />
+  <img src="img/qr_link.png" alt="qr" />
 </p-slide><!--/slide:cover-->
-  <!--slide:part-one--><p-slide class="cover">
+<!--slide:part-one--><p-slide class="cover">
   <h1>Partiamo dall’inizio…Signal?</h1>
   <p-fragment class="center">
     <img alt="so-confused" src="img/so-confused.gif" />
   </p-fragment>
 </p-slide>
 <p-slide class="slide-quote center">
-  <p-note class="text-sub-section" style="font-size: 1.8vw; line-height: 3vw">“Signals are the primary means of managing
-    state in your Solid application.
-    They provide a way to store and update values, and are the foundation of reactivity in Solid.
-
-    Signals can be used to represent any kind of state in your application, such as the current user, the current page,
-    or the current theme.
-
-    This can be any value, including primitive values such as strings and numbers, or complex values such as objects and
-    arrays.
-    ”
+  <p-note class="text-sub-section" style="font-size: 1.8vw; line-height: 3vw"
+    >“Signals are the primary means of managing state in your Solid application. They provide a way to store and update values, and are the foundation of reactivity in Solid.
+    Signals can be used to represent any kind of state in your application, such as the current user, the current page, or the current theme. This can be any value, including
+    primitive values such as strings and numbers, or complex values such as objects and arrays. ”
   </p-note>
-  <p-note style="font-size: 1.5vw;">
-    https://docs.solidjs.com/concepts/signals
-  </p-note>
+  <p-note style="font-size: 1.5vw"> https://docs.solidjs.com/concepts/signals </p-note>
 </p-slide>
 <p-slide class="two-columns-flex-start">
   <p-note class="my-presentation my-list">
@@ -67,7 +57,6 @@
       <li>📌 E’ possibile “iscriversi” e reagire tramite consumer, come ad esempio <b>effect</b></li>
       <li>📌 Per poter usare effect al di fuori del costruttore è necessario l’injector tra le sue opzioni</li>
     </ul>
-
   </p-note>
   <img alt="qr" src="img/export_1.png" />
 </p-slide>
@@ -76,50 +65,38 @@
     <h5 class="text-cover">Signal</h5>
     <ul class="long-list" style="margin-bottom: 0.5vh">
       <li>📌 Ogni singolo signal è chiamato “producer”</li>
-      <li>📌 Sia i template sia le funzioni che “leggono” i signal (es: <u>computed</u> ed <u>effect</u>) sono chiamati
-        <b>“consumer”</b></li>
-      <li>📌 Quando questo accade, si crea una “connessione” tra producer <-> consumer simile alla subscription negli
-        observable
-      </li>
-      <li>📌 I producer inviano una notifica di aggiornamento e non direttamente il nuovo valore, che andrà così
-        esplicitamente letto
-      </li>
+      <li>📌 Sia i template sia le funzioni che “leggono” i signal (es: <u>computed</u> ed <u>effect</u>) sono chiamati <b>“consumer”</b></li>
+      <li>📌 Quando questo accade, si crea una “connessione” tra producer <-> consumer simile alla subscription negli observable</li>
+      <li>📌 I producer inviano una notifica di aggiornamento e non direttamente il nuovo valore, che andrà così esplicitamente letto</li>
       <li>📌 Il consumer potrà decidere di leggere il valore oppure non farlo mai.</li>
-      <li>📌 Le funzioni computed, producendo a loro volta un signal, sono contemporaneamente producer and consumer
-      </li>
+      <li>📌 Le funzioni computed, producendo a loro volta un signal, sono contemporaneamente producer and consumer</li>
       <li>📌 I consumer sono memoized by default.</li>
     </ul>
   </p-note>
   <img alt="qr" src="img/export_1.png" />
 </p-slide>
-<p-slide class="two-columns-flex-start" style="flex-direction: row;flex-wrap: nowrap;">
+<p-slide class="two-columns-flex-start" style="flex-direction: row; flex-wrap: nowrap">
   <p-note class="my-presentation my-list">
     <h5 class="text-cover">Signal</h5>
     <ul class="long-list">
       <li>📌 E’ possibile creare signal definiti “computed” che dipendono dal valore di altri signal.</li>
       <li>📌 Le dipendenze sono dinamiche e possono essere incluse in statement condizionali</li>
       <li>📌 Sono memoized e lazy evaluated</li>
-      <li>📌 L’intera computazione viene eseguita unicamente al variare dei valori dei suoi consumer e solo se
-        esplicitamente “letti”
-      </li>
+      <li>📌 L’intera computazione viene eseguita unicamente al variare dei valori dei suoi consumer e solo se esplicitamente “letti”</li>
       <li>📌 <b>Sono read only</b></li>
     </ul>
-
   </p-note>
-  <img alt="qr" src="img/export_2.png" style="padding-top: 0;transform: scale(0.95);" />
-  <p-fragment class="invert"
-              style="position: absolute;right: 1em;width: 9.5em;height: 1em;background: #FFF;top: 8.7em;"></p-fragment>
-  <p-fragment class="invert"
-              style="position: absolute;right: 1.5em;width: 9.5em;height: 1em;background: #FFF;top: 9.7em;"></p-fragment>
-  <p-fragment class="invert"
-              style="position: absolute;right: 1em;width: 9.5em;height: 2em;background: #FFF;top: 10.7em;"></p-fragment>
+  <img alt="qr" src="img/export_2.png" style="padding-top: 0; transform: scale(0.95)" />
+  <p-fragment class="invert" style="position: absolute; right: 1em; width: 9.5em; height: 1em; background: #fff; top: 8.7em"></p-fragment>
+  <p-fragment class="invert" style="position: absolute; right: 1.5em; width: 9.5em; height: 1em; background: #fff; top: 9.7em"></p-fragment>
+  <p-fragment class="invert" style="position: absolute; right: 1em; width: 9.5em; height: 2em; background: #fff; top: 10.7em"></p-fragment>
 </p-slide>
 <p-slide class="cover-subSection">
   <h1>Observable vs Signal</h1>
 </p-slide>
 <p-slide>
   <h5 class="text-cover center">Observable vs Signal</h5>
-  <div style="display: flex; align-items: center;" class="two-columns">
+  <div style="display: flex; align-items: center" class="two-columns">
     <p-note>
       <ul class="long-list">
         <li>☝️Gli observable possono non emettere alcun valore</li>
@@ -130,26 +107,24 @@
     <p-note>
       <ul class="long-list">
         <li>☝️Signal ha sempre almeno un valore (alla sua creazione)</li>
-        <li>☝️Signal non emette nulla se non la notifica di un cambio di valore, che deve essere “pulled” dal consumer
-          che avviene in maniera sincrona
-        </li>
-        <li>☝️Signal non presenta il concetto di stato complete
-        </li>
+        <li>☝️Signal non emette nulla se non la notifica di un cambio di valore, che deve essere “pulled” dal consumer che avviene in maniera sincrona</li>
+        <li>☝️Signal non presenta il concetto di stato complete</li>
       </ul>
     </p-note>
   </div>
 </p-slide>
 <p-slide>
   <h5 class="text-cover center">Observable vs Signal</h5>
-  <div style="display: flex; align-items: center;" class="two-columns" style="align-items: center;">
+  <div style="display: flex; align-items: center" class="two-columns" style="align-items: center">
     <img alt="code_03" src="img/export_3.png" />
     <ul class="long-list">
       <p-fragment>
         <li>✔ combineLatest non emette nulla finché almeno uno dei due observable non ha almeno un valore</li>
       </p-fragment>
       <p-fragment>
-        <li>✔ Computed garantisce il “glitch-free” infatti ad ogni cambio di valore non viene emesso alcunché se non una
-          semplice notifica che previene l’esecuzione indesiderata del codice
+        <li>
+          ✔ Computed garantisce il “glitch-free” infatti ad ogni cambio di valore non viene emesso alcunché se non una semplice notifica che previene l’esecuzione indesiderata del
+          codice
         </li>
       </p-fragment>
     </ul>
@@ -157,19 +132,19 @@
 </p-slide>
 <p-slide>
   <h5 class="text-cover center">Observable vs Signal</h5>
-  <div style="display: flex; align-items: center;" class="two-columns" style="align-items: center;">
+  <div style="display: flex; align-items: center" class="two-columns" style="align-items: center">
     <img alt="code_04" src="img/export_4.png" />
     <ul class="long-list">
       <p-fragment>
-        <li>La differenza maggiore in questo caso è che merge(), quando uno degli observable passati è completo,
-          continuerà
-          a emettere valori solo dagli observable non completi e ignorerà gli altri. Comportamento che computed non ha
+        <li>
+          La differenza maggiore in questo caso è che merge(), quando uno degli observable passati è completo, continuerà a emettere valori solo dagli observable non completi e
+          ignorerà gli altri. Comportamento che computed non ha
         </li>
       </p-fragment>
     </ul>
   </div>
 </p-slide><!--/slide:part-one-->
-  <!--slide:part-two--><p-slide class="cover-subSection">
+<!--slide:part-two--><p-slide class="cover-subSection">
   <h1>Signal: esempi di utilizzo</h1>
 </p-slide>
 <p-slide class="cover">
@@ -214,10 +189,10 @@
     background: #fff;
   }
 </style><!--/slide:part-two-->
-  <!--slide:part-three--><p-slide class="cover-subSection">
+<!--slide:part-three--><p-slide class="cover-subSection">
   <h1>Ultime novità</h1>
 </p-slide>
-<p-slide class="two-columns-flex-start" style="flex-direction: row;align-items: center;">
+<p-slide class="two-columns-flex-start" style="flex-direction: row; align-items: center">
   <p-note class="my-presentation my-list">
     <h5 class="text-cover">Signal Inputs</h5>
     <ul class="long-list">
@@ -227,9 +202,8 @@
       <li>📌 Nessuna breaking change per i componenti padre (allo stato attuale della preview)</li>
       <li>📌 E’ possibile definire un nome alternativo attraverso la proprietà alias di input</li>
     </ul>
-
   </p-note>
-  <p-note style="font-size: 0.5em;">
+  <p-note style="font-size: 0.5em">
     <pre class="self-center language-javascript" style="border: 1px solid #101099"> <code> export class InputComponent {
       firstName = input&lt;string>();
       // required inputs
@@ -239,16 +213,16 @@
   &lt;app-input lastName="Doe">&lt;/app-input> </code> </p-fragment> </pre>
   </p-note>
 </p-slide>
-<p-slide class="two-columns-flex-start" style="flex-direction: row;align-items: center;">
+<p-slide class="two-columns-flex-start" style="flex-direction: row; align-items: center">
   <p-note class="my-presentation my-list">
     <ul class="long-list">
-      <li>E’ inoltre possibile effettuare operazioni di trasformazione alla ricezione dell’input tramite la proprietà
-        transform, sia mantenendo il tipo di output che cambiandolo completamente
+      <li>
+        E’ inoltre possibile effettuare operazioni di trasformazione alla ricezione dell’input tramite la proprietà transform, sia mantenendo il tipo di output che cambiandolo
+        completamente
       </li>
     </ul>
-
   </p-note>
-  <p-note style="font-size: 0.5em;">
+  <p-note style="font-size: 0.5em">
     <pre class="self-center language-javascript" style="border: 1px solid #101099"><code>export class InputComponent {
   firstName = input&lt;number, string>(0, {
   </code> <p-fragment><code>alias: 'first',
@@ -263,8 +237,8 @@
 </code> </p-fragment> </pre>
   </p-note>
 </p-slide>
-<p-slide class="two-columns-flex-start" style="flex-direction: row;align-items: center;">
-  <p-note class="my-presentation my-list" style="align-items: flex-start;">
+<p-slide class="two-columns-flex-start" style="flex-direction: row; align-items: center">
+  <p-note class="my-presentation my-list" style="align-items: flex-start">
     <h6 class="text-cover">viewChild / viewChildren</h6>
     <h6 class="text-cover">contentChild / contentChildren</h6>
     <ul class="long-list" style="margin-top: 1em">
@@ -272,9 +246,8 @@
       <li>📌 Utilizzo di effect al posto dell’afterviewinit lifecycle</li>
       <li>📌 contentChild / contentChildren possono essere usati con lo stesso approccio</li>
     </ul>
-
   </p-note>
-  <p-note style="font-size: 0.5em;">
+  <p-note style="font-size: 0.5em">
     <pre class="self-center language-javascript" style="border: 1px solid #101099">
       <code>
   @Component({
@@ -298,8 +271,8 @@
     </pre>
   </p-note>
 </p-slide><!--/slide:part-three-->
-  <!--slide:thanks--><p-slide>
-  <img alt="thatsall" src="img/thatsall.gif" style="height: 60vh;" />
+<!--slide:thanks--><p-slide>
+  <img alt="thatsall" src="img/thatsall.gif" style="height: 60vh" />
 </p-slide>
 <p-slide class="two-columns">
   <p-note class="my-data my-presentation">
@@ -311,32 +284,30 @@
   <img alt="qr" src="img/qr_link.png" />
 </p-slide><!--/slide:thanks-->
 </p-deck>
-<div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="presentation-progress" role="progressbar"
-     title="Presentation progress"></div>
-<div class="presentation-toolbar" role="toolbar">
-  <button aria-label="Toggle speaker mode (Alt-M)" class="toggle-mode" title="Toggle speaker mode" type="button">
-    <svg viewBox="0 0 1 1">
-      <path d="M.05 .5h.6v-.45h-.6v.9h.6v-.45M.75 .05h.25M.75 .2h.25M.75 .35h.25" fill="none" stroke="currentColor"
-            stroke-width="0.1" />
-    </svg>
-  </button>
-  <button aria-label="Toggle fullscreen mode" class="fullscreen" title="Toggle fullscreen mode" type="button">
-    <svg viewBox="0 0 1 1">
-      <g fill="none" stroke="currentColor" stroke-width="0.1">
-        <path d="M.05 .3v-.25h.25M.7 .05h.25v.25M.95 .7v.25h-.25M.3 .95h-.25v-.25" />
-        <path d="M.05 .3h.25v-.25M.7 .05v.25h.25M.95 .7h-.25v.25M.3 .95v-.25h-.25" />
-      </g>
-    </svg>
-  </button>
-</div>
-<nav class="presentation-nav">
-  <button aria-label="Go backward" class="previous" title="Go backward" type="button"></button>
-  <button aria-label="Go forward" class="next" title="Go forward" type="button"></button>
-</nav>
-<script src="js/main.js" type="module"></script>
-<script src="js/presentation.js" type="module"></script>
-<script defer src="vendor/prismjs/prism.js"></script>
-<script defer src="vendor/prismjs/components/prism-typescript.js"></script>
-<script defer src="vendor/prismjs/components/prism-scss.js"></script>
-</body>
+    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="presentation-progress" role="progressbar" title="Presentation progress"></div>
+    <div class="presentation-toolbar" role="toolbar">
+      <button aria-label="Toggle speaker mode (Alt-M)" class="toggle-mode" title="Toggle speaker mode" type="button">
+        <svg viewBox="0 0 1 1">
+          <path d="M.05 .5h.6v-.45h-.6v.9h.6v-.45M.75 .05h.25M.75 .2h.25M.75 .35h.25" fill="none" stroke="currentColor" stroke-width="0.1" />
+        </svg>
+      </button>
+      <button aria-label="Toggle fullscreen mode" class="fullscreen" title="Toggle fullscreen mode" type="button">
+        <svg viewBox="0 0 1 1">
+          <g fill="none" stroke="currentColor" stroke-width="0.1">
+            <path d="M.05 .3v-.25h.25M.7 .05h.25v.25M.95 .7v.25h-.25M.3 .95h-.25v-.25" />
+            <path d="M.05 .3h.25v-.25M.7 .05v.25h.25M.95 .7h-.25v.25M.3 .95v-.25h-.25" />
+          </g>
+        </svg>
+      </button>
+    </div>
+    <nav class="presentation-nav">
+      <button aria-label="Go backward" class="previous" title="Go backward" type="button"></button>
+      <button aria-label="Go forward" class="next" title="Go forward" type="button"></button>
+    </nav>
+    <script src="js/main.js" type="module"></script>
+    <script src="js/presentation.js" type="module"></script>
+    <script defer src="vendor/prismjs/prism.js"></script>
+    <script defer src="vendor/prismjs/components/prism-typescript.js"></script>
+    <script defer src="vendor/prismjs/components/prism-scss.js"></script>
+  </body>
 </html>
