--- a/src/slides/cover.html
+++ b/src/slides/cover.html
@@ -15,5 +15,5 @@
     <span>Marco Pollacci</span>
     <span class="text-cover">Senior Software Developer @GELLIFY</span>
   </p-note>
-  <img src="img/qr_link.png" alt="qr" />
+  <img style="--image-start-size:9em" class="alter-image-size" src="img/qr_link.svg" alt="qr" />
 </p-slide>
