--- a/src/slides/thanks.html
+++ b/src/slides/thanks.html
@@ -1,12 +1,19 @@
 <p-slide>
-  <img alt="thatsall" src="img/thatsall.gif" style="height: 60vh" />
+  <img alt="thatsall" src="img/thatsall.gif" style="--image-start-size: 100%" class="alter-image-size" />
+</p-slide>
+<p-slide class="center">
+  <h2 style="margin-bottom: 0.3em">You can see this slide on</h2>
+  <p-note style="margin-bottom: 0.5em">
+    <img src="img/qrcode_marcopollacci.github.io.png" alt="qrcode" class="alter-image-size" />
+  </p-note>
+  <p-note><a href="https://marcopollacci.github.io/angular-signal/">https://marcopollacci.github.io/angular-signal/</a></p-note>
 </p-slide>
 <p-slide class="two-columns">
   <p-note class="my-data my-presentation">
-    <h5 class="text-cover">Thank you again Folks!</h5>
+    <h5 class="text-cover">Thank you again!</h5>
     <img alt="me" class="my-face" src="img/me.jpg" />
-    <span>Marco Pollacci</span>
+    <span class="graphik-medium">Marco Pollacci</span>
     <span class="text-cover">Senior Software Developer @GELLIFY</span>
   </p-note>
-  <img alt="qr" src="img/qr_link.png" />
+  <img style="--image-start-size:9em" class="alter-image-size qr" src="img/qr_link.svg" alt="qr" />
 </p-slide>
